# yolov8_ros

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  package.xml  proto.rviz  pyproject.toml  python_entrypoint.py  stretch-node-proto.py
.github/workflows/: catkin-build.yml  colcon-build.yml
launch/: right_wrist_node.launch  right_wrist_node_launch.xml
rviz/: wrist_tracking.rviz
rviz2/: yolov8_pose_tracking.rviz
scripts/: python_entrypoint.py
yolov8_ros/: __init__.py  parameters.py  profiler.py  right_wrist_node.py  stretch-node-proto.py
