[tool.poetry]
name = "yolov8-env"
version = "0.1.0"
description = ""
authors = ["Elvin Yang <eyy@umich.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "PyTorch CPU"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyTorch CUDA 11.8"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# torch = {version = "*", source = "PyTorch CPU"}
# torchaudio = {version = "*", source = "PyTorch CPU"}
# torchvision = {version = "*", source = "PyTorch CPU"}
torch = {version = "*", source = "PyTorch CUDA 11.8"}
torchaudio = {version = "*", source = "PyTorch CUDA 11.8"}
torchvision = {version = "*", source = "PyTorch CUDA 11.8"}
matplotlib = "^3.8.0"
numpy = "^1.26.1"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
scipy = "^1.11.3"
tqdm = "^4.66.1"
pandas = "^2.1.1"
seaborn = "^0.13.0"
psutil = "^5.9.6"
py-cpuinfo = "^9.0.0"
thop = "^0.1.1.post2209072238"
ultralytics = "^8.0.199"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
