[tool.poetry]
name = "yolov8-ros"
version = "0.1.0"
description = ""
authors = ["Elvin Yang <eyy@umich.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
priority = "supplemental"

[tool.poetry.dependencies]
# rospy.init_node hangs on python>=3.11
python = "~3.10"
torch = {version = "2.1.1+cu118", source = "pytorch"}
torchaudio = {version = "2.1.1+cu118", source = "pytorch"}
torchvision = {version = "0.16.1+cu118", source = "pytorch"}
loguru = "^0.7.2"
rospkg = "^1.5.0"
ultralytics = "^8.0.199"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
